2003-03-20  Piers Haken  <piersh@friskit.com>

	* makefile.gnu: really fix the System.Management build problems

2003-03-11  Cesar Octavio Lopez Nataren  <cesar@ciencias.unam.mx>

	* mcs/class: Added the directories Microsoft.JScript and Microsoft.Vsa that
	will have the runtime support and CodeDom support for the JScript Compiler.

2003-03-06 Jackson Harper <jackson@latitudegeo.com>

	* makefile.gnu: Add PEAPI to the build

2003-03-06  Sebastien Pouliot <spouliot@videotron.ca>

	* library.build: added Mono.Security to build, test and clean. 

2003-03-04  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* class/library.build:
	* class/makefile.gnu: added Mono.Posix and System.Management.

2003-03-02 Jackson Harper <jackson@latitudegeo.com>

	* mcs/class: Add PEAPI directory

2003-02-22  Martin Baulig  <martin@ximian.com>

	* library.make: Pass `MCS_FLAGS' to MCS.

2003-02-15  Zoltan Varga  <vargaz@freemail.hu>

	* makefile.gnu (test): do not install .dbg files since mcs no longer
	generates them.

2003-02-13  Tim Coleman <tim@timcoleman.com>
	* makefile.gnu: Add System.Data.OracleClient to linux build.

2003-02-10  Nick Drochak  <ndrochak@gol.com>

	* library.build:
	* makefile: add testcorlib target to run unit tests just for corlib.

2003-02-05  Sebastien Pouliot <spouliot@videotron.ca>

	* library.build: added Mono.Security.Win32 to build, test and 
	clean. There's no makefile.gnu for this assembly as it is 
	specific to Win32.

2003-01-23  Nick Drochak <ndrochak@gol.com>

	* makefile: install the .dbg files too so the debugger can use them.

2003-01-17  Sebastien Pouliot <spouliot@videotron.ca>

	* library.build: added System.Security to build, test and clean.
	There's no makefile.gnu yet for this assembly.

2003-01-16  Rodrigo Moya <rodrigo@ximian.com>

	* makefile.gnu: added Mono.Data.DB2Client directory.

2003-01-08  Gaurav Vaish <gvaish_mono AT lycos.com>

	* System.Web.Mobile  : Added new directory

2002-12-11  Jeroen Janssen <japj@darius.demon.nl>
	