@@ -1,0 +1,4 @@
+./System.Runtime.InteropServices.CustomMarshalers/EnumerableToDispatchMarshaler.cs
+./System.Runtime.InteropServices.CustomMarshalers/ExpandoToDispatchExMarshaler.cs
+./System.Runtime.InteropServices.CustomMarshalers/EnumeratorToEnumVariantMarshaler.cs
+./System.Runtime.InteropServices.CustomMarshalers/TypeToTypeInfoMarshaler.cs
