@@ -1,0 +1,3 @@
+2003-03-22  Martin Willemoes Hansen <mwh@sysrq.dk>
+
+	* Stubbed assembly
